[package]
name = "carrier"
version = "0.1.0"
edition = "2021"
description = "A bundler for box modules"

[[bin]]
name = "carrier"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "2"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3"
flate2 = "1"
tar = "0.4"
dirs = "6.0.0"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
