[workspace]
members = [
    "crates/carrier-core",
    "crates/carrier",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
zip = "2"
flate2 = "1"
tar = "0.4"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
insta = "1"
