[package]
name = "carrier-core"
version.workspace = true
edition.workspace = true
description = "Core logic for carrier — bundling, installing, and managing box modules"

[features]
network = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
walkdir.workspace = true
zip.workspace = true
flate2.workspace = true
tar.workspace = true
dirs.workspace = true
reqwest.workspace = true
tempfile.workspace = true
semver.workspace = true

[dev-dependencies]
insta.workspace = true
