[package]
name = "carrier"
version.workspace = true
edition.workspace = true
description = "A bundler and package manager for box modules"

[[bin]]
name = "carrier"
path = "src/main.rs"

[dependencies]
carrier-core = { path = "../carrier-core", features = ["network"] }
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
